[package]
name = "vaux-broker"
version.workspace = true
edition.workspace = true
authors = ["ByteTrail, LLC"]
description = "MQTT Broker"


[dependencies]
uuid = { version = "1.0.0", features = ["v4"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
futures = "0.3.21"
bytes = "1.1.0"
vaux-mqtt = { path = "../vaux-mqtt" }
vaux-async = { path = "../vaux-async" }
tokio-rustls = { version = "0.26" }
tracing = "0.1.44"


[dev-dependencies]
vaux-client = { path = "../vaux-client" }
vaux-mqtt = { path = "../vaux-mqtt" }
vaux-async = { path = "../vaux-async" }
rcgen = "0.14.8"
rustls = "0.23.41"
tokio-rustls = "0.26"
