[package]
name = "vaux-client"
version = "0.6.3"
edition = "2021"

[features]
developer = []

[dependencies]
tokio = { version = "1.41.0", features = [
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "macros",
] }
vaux-mqtt = { version = "0.6.3", path = "../vaux-mqtt" }
vaux-async = { version = "0.6.3", path = "../vaux-async" }

bytes = "1.8"
uuid = "1.11"
tokio-rustls = { version = "0.26" }
async-std = "1.13.0"
rustls = "0.23.22"
