[package]
name = "vaux-client"
version = "0.6.2"
edition = "2021"

[features]
developer = []

[dependencies]
async-std = "1.13.0"
bytes = "1.8"
rustls = "0.23.22"
tokio = { version = "1.41.0", features = [
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "macros",
] }
tokio-rustls = { version = "0.26" }
uuid = "1.11"
vaux-mqtt = { version = "0.6.2", path = "../vaux-mqtt" }
vaux-async = { version = "0.6.2", path = "../vaux-async" }
