[package]
name = "vaux-client"
version.workspace = true
edition.workspace = true

[features]
developer = []

[dependencies]
async-std = "1.13.0"
bytes = "1.8"
rustls = "0.23.22"
tokio = { version = "1.41.0", features = [
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tokio-rustls = { version = "0.26" }
uuid = "1.11"
vaux-mqtt = { path = "../vaux-mqtt" }
vaux-async = { path = "../vaux-async" }

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
