[package]
name = "vaux-mqtt"
version = "0.4.14"
edition = "2021"

[features]
default = []
pedantic = []


[dependencies]
tokio-util = { version = "0.7.0", features = ["codec"] }
bytes = "1.5.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
prop-macro = { path = "../prop-macro" }
lazy_static = "1.4"
