[package]
name = "vaux-sub"
version = "0.6.0"
edition = "2021"

[dependencies]
vaux-client = { path = "../vaux-client", features = ["developer"] }
vaux-mqtt = { path = "../vaux-mqtt" }
clap = { version = "4.4", features = ["derive"] }
rustls = "0.23"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
