[package]
name = "vaux-test"
version = "0.6.11"
edition = "2021"

[dependencies]
vaux-mqtt = { path = "../vaux-mqtt" }
bytes = "1.1.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
