[package]
name = "vaux"
version = "0.8.1"
edition = "2021"

[features]
console = ["dep:ratatui"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = { version = "0.29.0", optional = true }
tokio = { version = "1.17.0", features = ["full"] }
vaux-broker = { path = "../vaux-broker" }
