[package]
name = "vaux"
version.workspace = true
edition.workspace = true

[features]
console = ["dep:ratatui"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = { version = "0.29.0", optional = true }
rustls = "0.23.41"
rustls-pemfile = "2.2.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-rustls = "0.26.4"
vaux-broker = { path = "../vaux-broker" }
